--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-	<h1>サックスの低いシ♭は補正できる？！</h1>
+		<h1>アルトサックスの低いシ♭は補正できる？！</h1>
+	<h2>Wakkaを使えば他の音にも影響が少なく、音程を安定させる！	</h2>
 </body>
 
 </html>
