--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 		<h1>アルトサックスの低いシ♭は補正できる？！</h1>
-	<h2>Wakkaを使えば他の音にも影響が少なく、音程を安定させることができます！/h2>
+	<h2>Wakkaを使えば他の音にも影響が少なく、音程を安定させることができます！</h2>
 </body>
 
 </html>
